samples/_failures_safe/1761275691_34464e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd842512.c: In function ‘main’:
./samples/SAFE/__tmp_dd842512.c:157:25: error: missing terminating " character
  157 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_dd842512.c:157:9: error: expected expression at end of input
  157 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_dd842512.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dd842512.c:157:9: error: expected declaration or statement at end of input
